--- a/app/src/main/res/layout/fragment_month_consumption.xml
+++ b/app/src/main/res/layout/fragment_month_consumption.xml
@@ -53,14 +53,19 @@
                         android:layout_height="0sp"
                         android:layout_weight="0.8"/>
                     <!-- check boxes for other consumptions -->
-                    <LinearLayout
-                        android:layout_width="match_parent"
+
+                    <TextView
+                        style="@style/table_item_label"
+                        android:layout_width="fill_parent"
+                        android:background="@drawable/main_bg2"
+                        android:padding="2dp"
+                        android:layout_marginTop="10sp"
+                        android:layout_marginBottom="10sp"
                         android:layout_height="0sp"
-                        android:layout_weight="0.2"
-                        android:orientation="horizontal"
-                        android:gravity="center"
-                        >
-                    </LinearLayout>
+                        android:layout_weight="0.1"
+                        android:text="Compare with:"
+                        android:textColor="#000000"
+                        />
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="1sp"
