--- a/app/src/main/res/layout/fragment_day_consumption.xml
+++ b/app/src/main/res/layout/fragment_day_consumption.xml
@@ -59,10 +59,12 @@
                 android:id="@+id/day_chart_container"
                 >
                 <LinearLayout
+                    android:id="@+id/chart_day_sidebar"
                     android:layout_width="0sp"
                     android:layout_weight="0.49"
                     android:layout_height="match_parent"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    >
                     <android.prsma.org.energyspectrum.customUI.LineConsumptionChart
                         android:id="@+id/day_consumption_chart"
                         android:layout_width="match_parent"
@@ -173,11 +175,11 @@
                         >
                     </LinearLayout>-->
                 </LinearLayout>
-                <LinearLayout
-                    android:layout_width="1sp"
-                    android:layout_height="match_parent"
-                    android:background="#000000"
-                    android:layout_margin="10sp"/>
+                <!--<LinearLayout-->
+                    <!--android:layout_width="1sp"-->
+                    <!--android:layout_height="match_parent"-->
+                    <!--android:background="#000000"-->
+                    <!--android:layout_margin="10sp"/>-->
 
                 <LinearLayout
                     android:id="@+id/day_side_bar"
