--- a/app/src/main/res/layout/fragment_consumption_log.xml
+++ b/app/src/main/res/layout/fragment_consumption_log.xml
@@ -10,67 +10,149 @@
     android:background="#FFFFFF"
     tools:context="layout.ConsumptionLogFragment"
     >
+            <!--    <TextView
+                    android:background="@drawable/current_cons_label"
+                    android:text="Daily consumption / Average (kWh)"
+                    android:padding="5sp"
+                    android:layout_marginBottom="5sp"
+                    android:textColor="#FFFFFF"
+                    android:textStyle="bold"
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    />-->
 
-
-<!--    <TextView
-        android:background="@drawable/current_cons_label"
-        android:text="Daily consumption / Average (kWh)"
-        android:padding="5sp"
-        android:layout_marginBottom="5sp"
-        android:textColor="#FFFFFF"
-        android:textStyle="bold"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        />-->
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-    <TextView
-        style="@style/table_item_label"
-        android:layout_width="0sp"
-        android:layout_weight="0.5"
-        android:layout_height="wrap_content"
-        android:background="@drawable/current_cons_label"
-        android:text="Consumption Log (today)"
-        android:padding="5sp"
-        android:layout_marginBottom="5sp"
-        android:textColor="#FFFFFF"
-        android:textStyle="bold"
-        />
-
-        <LinearLayout
-            android:layout_width="0sp"
-            android:layout_weight="0.5"
-            android:layout_height="wrap_content"
-            />
-</LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
-        <ListView
-            android:id="@+id/events_log"
-            android:layout_width="0sp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.5">
-        </ListView>
-        <LinearLayout
-            android:layout_width="0sp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.5"
-            android:orientation="vertical">
-            <TextView
-                style="@style/table_item_label"
-                android:layout_width="fill_parent"
-                android:background="@drawable/main_bg2"
-                android:padding="2dp"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Details"
-                android:textColor="#000000"
-                />
-        </LinearLayout>
-    </LinearLayout>
+                android:orientation="horizontal">
+                <TextView
+                    style="@style/table_item_label"
+                    android:layout_width="0sp"
+                    android:layout_weight="0.5"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/current_cons_label"
+                    android:text="Consumption Log (today)"
+                    android:padding="5sp"
+                    android:layout_marginBottom="5sp"
+                    android:textColor="#FFFFFF"
+                    android:textStyle="bold"
+                    />
+
+                <LinearLayout
+                    android:layout_width="0sp"
+                    android:layout_weight="0.5"
+                    android:layout_height="wrap_content"
+                    />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+                <ListView
+                    android:id="@+id/events_log"
+                    android:layout_width="0sp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.5">
+                </ListView>
+                <LinearLayout
+                    android:layout_width="1sp"
+                    android:layout_height="match_parent"
+                    android:background="#000000"
+                    android:layout_margin="10sp"/>
+                <LinearLayout
+                    android:layout_width="0sp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.5"
+                    android:orientation="vertical">
+
+                    <TextView
+                        style="@style/table_item_label"
+                        android:layout_width="fill_parent"
+                        android:background="@drawable/main_bg2"
+                        android:padding="2dp"
+                        android:layout_height="wrap_content"
+                        android:text="Details"
+                        android:textColor="#000000"
+                        />
+
+                            <ScrollView
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:fillViewport="true"
+                                >
+                                <LinearLayout
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:orientation="vertical">
+                    <TextView
+                        style="@style/event_detail_label"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Appliance:"/>
+
+                    <TextView
+                        style="@style/event_detail_item"
+                        android:id="@+id/event_detail_label"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Dishwasher"/>
+
+                    <TextView
+                        style="@style/event_detail_label"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Consumption:"/>
+
+                    <TextView
+                        style="@style/event_detail_item"
+                        android:id="@+id/event_detail_consumption"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="200W"/>
+
+                    <TextView
+                        style="@style/event_detail_label"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Date:"/>
+
+                    <TextView
+                        style="@style/event_detail_item"
+                        android:id="@+id/event_detail_timestamp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="19:50"/>
+
+                    <TextView
+                        style="@style/event_detail_label"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Also happened today at:"/>
+
+                    <TextView
+                        style="@style/event_detail_item"
+                        android:id="@+id/event_detail_occurrences"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="19:50"/>
+
+                    <TextView
+                        style="@style/event_detail_label"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Usually happens at at:"/>
+
+                    <TextView
+                        style="@style/event_detail_item"
+                        android:id="@+id/event_detail_usual_occurrences"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="19:50"/>
+                        </LinearLayout>
+                    </ScrollView>
+                </LinearLayout>
+
+            </LinearLayout>
+
 
 </LinearLayout>
