--- a/app/src/main/res/layout/fragment_day_consumption.xml
+++ b/app/src/main/res/layout/fragment_day_consumption.xml
@@ -88,7 +88,7 @@
                         <TableRow
                             android:layout_height="wrap_content"
                             android:layout_width="match_parent"
-                            android:gravity="center_horizontal"
+                            android:gravity="start"
                             >
                             <LinearLayout
                                 android:layout_width="wrap_content"
@@ -98,11 +98,11 @@
                                 <TextView
                                     android:text="Yesterday"
                                     android:id="@+id/day_1_check"
-                                    android:textColor="@color/comp1_color"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content" />
                                 <CheckBox
                                     android:id="@+id/checkbox_1day"
+                                    android:backgroundTint="@color/orange"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content" />
                             </LinearLayout>
@@ -121,7 +121,6 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content" />
                             </LinearLayout>
-
                             <LinearLayout
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
@@ -137,6 +136,11 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content" />
                             </LinearLayout>
+                            </TableRow>
+                        <TableRow
+                            android:layout_height="wrap_content"
+                            android:layout_width="match_parent"
+                            android:gravity="start">
                             <LinearLayout
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
@@ -180,11 +184,11 @@
                         >
                     </LinearLayout>-->
                 </LinearLayout>
-                <!--<LinearLayout-->
-                    <!--android:layout_width="1sp"-->
-                    <!--android:layout_height="match_parent"-->
-                    <!--android:background="#000000"-->
-                    <!--android:layout_margin="10sp"/>-->
+                <LinearLayout
+                    android:layout_width="1sp"
+                    android:layout_height="match_parent"
+                    android:background="#000000"
+                    android:layout_margin="10sp"/>
 
                 <LinearLayout
                     android:id="@+id/day_side_bar"
