--- a/app/src/main/res/layout/fragment_summary.xml
+++ b/app/src/main/res/layout/fragment_summary.xml
@@ -37,7 +37,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:background="@drawable/current_cons_label"
-                            android:text="Consumo Actual:"
+                            android:text="Current Consumption:"
                             android:textColor="#FFFFFF"
                             android:textStyle="bold" />
 
@@ -89,7 +89,7 @@
                             android:background="@drawable/main_bg2"
                             android:padding="2dp"
                             android:layout_height="wrap_content"
-                            android:text=" Consumo Actual VS Passado"
+                            android:text=" Current VS Past"
                             android:textColor="#000000"
                              />
 
