--- a/app/src/main/res/layout/fragment_production.xml
+++ b/app/src/main/res/layout/fragment_production.xml
@@ -11,7 +11,8 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal" >
+        android:orientation="horizontal"
+        >
 
         <android.prsma.org.energyspectrum.customUI.ProductionChart
             android:id="@+id/frag_prod_chart"
