--- a/app/src/main/res/layout/fragment_summary.xml
+++ b/app/src/main/res/layout/fragment_summary.xml
@@ -47,6 +47,7 @@
                         <TextView
                             android:id="@+id/frag_current_cons_label"
                             style="@style/table_item_value"
+                            android:layout_width="wrap_content"
                             android:background="@drawable/main_bg1"
                             android:paddingLeft="10dp"
                             android:text="500W"
